[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwencpp_wrapper"
version = "1.0.0"
description = "A Python wrapper and Web UI for QwenTTS (voice cloning and design)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio>=4.0.0",
]

[project.scripts]
qwen-tts-studio = "qwencpp_wrapper.main:main"

[tool.setuptools]
package-dir = {"qwencpp_wrapper" = "."}
packages = ["qwencpp_wrapper"]

[tool.setuptools.exclude-package-data]
qwencpp_wrapper = [
    "qwen-tts-server.exe",
    "*.log",
    "*.bat",
    "tmp_temp/*",
    "Voices/*"
]
